--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 full_rebuild: true
-name: "MultiMarkdown LaTeX CSS"
-description: "Using CSS to make the MultiMarkdown to HTML output mimics the MultiMarkdown to LaTeX output"
+name: "Markdown LaTeX CSS"
+description: "Using CSS to make the Markdown to HTML output mimics the Markdown to LaTeX output"
 domain: ickc.github.io #If you want to force HTTPS, put down the domain without the http: e.g. example.com
 url: https://ickc.github.io #place url
-baseurl: /multimarkdown-latex-css #place folder name if site is served in subfolder
+baseurl: /markdown-latex-css #place folder name if site is served in subfolder
 permalink: /:title.html
 author: #For jekyll-feed
   name: "Kolen"
@@ -19,7 +19,7 @@ defaults:
     values:
       layout: "default"
 
-exclude: [.git, .gitignore, .sass-cache, Gemfile, Gemfile.lock, index.md, multimarkdown-latex.sh]
+exclude: [.git, .gitignore, .sass-cache, Gemfile, Gemfile.lock, index.md, markdown-latex.sh]
 
 gems:
   - jekyll-sitemap
